testsuite/bsc.typechecker/kind/NumPlusOne.bs
package NumPlusOne () where

x :: 1 Bool
x = _

